# orlqp

./: CMakeLists.txt  README.md  cuda_run_dev.sh  run_dev.sh  run_dev_cuda.sh
cmake/: FindCLN.cmake  FindGiNaC.cmake  orlqpConfig.cmake.in
docker/: Dockerfile  Dockerfile.cuda
exports/: TianzeLIPQP.hpp
include/orlqp/: ExpandedMPCProblem.hpp  MPCProblem.hpp  OSQP.hpp  QPArrayProblem.hpp  QPProblem.hpp  SymbolicQPProblem.hpp  orlqp.hpp  types.hpp  util.hpp
include/orlqp/symbolic/: export.hpp  types.hpp  util.hpp
src/: expanded_mpc.cpp  export.cpp  mpc.cpp  osqp.cpp  qp_array.cpp  symbolic.cpp
tests/: simple_mpc.cpp  simple_mpc_array.cpp  tianze_lip.cpp
